ozone/wayland: discard presentation feedbacks after the threshold.

The frame management mechanism expects that there are no more than
25 submitted frames at the same time. However, this number can
grow bigger if Wayland compositor doesn't send feedbacks (although
the protocol is supported). One of such examples is Sway that
runs on top of gnome/mutter, which doesn't expose wp_presentation
if the underlying system doesn't support that.

See bug reported to wlroots -
https://gitlab.freedesktop.org/wlroots/wlroots/-/issues/3340

PS also the number of the threshold has been lowered to avoid
FATAL:compositor_frame_sink_support.cc(734)] Check failed: pending_received_frame_times_.size() <= 25u (26 vs. 25)
errors.

Bug: 1253566, 1187077, 1243133, 1254273
Change-Id: Ib2b222f40588212342dd88b2cb880647024788f4
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3322619
Reviewed-by: Robert Kroeger <rjkroege@chromium.org>
Reviewed-by: Kramer Ge <fangzhoug@chromium.org>
Commit-Queue: Maksim Sisov <msisov@igalia.com>
Cr-Commit-Position: refs/heads/main@{#950548}